@@ -2,7 +2,6 @@ CC		= gcc
 TARGETS		?= netcfg-dhcp netcfg-static netcfg
 
 LDOPTS		= -ldebconfclient -ldebian-installer -liw
-PREFIX		= $(DESTDIR)/usr/
 CFLAGS		= -W -Wall
 COMMON_OBJS	= netcfg-common.o mii-lite.o wireless.o
 
@@ -12,27 +11,19 @@ else
 CFLAGS += -Os -fomit-frame-pointer
 endif
 
-STRIPTOOL	= strip
-STRIP		= $(STRIPTOOL) -R .note -R .comment
-
-all: $(TARGETS) sleep
+all: $(TARGETS)
 
 netcfg-dhcp: netcfg-dhcp.o dhcp.o
 netcfg-static: netcfg-static.o static.o
 netcfg: netcfg.o dhcp.o static.o
 
-sleep: sleep.c
-	$(CC) $(CFLAGS) -o $@ $<
-	$(STRIP) $@
-
 $(TARGETS): $(COMMON_OBJS)
 	$(CC) -o $@ $^ $(LDOPTS)
-	$(STRIP) $@
 
 %.o: %.c
 	$(CC) -c $(CFLAGS) $(DEFS) $(INCS) -o $@ $<
 
 clean:
-	rm -f $(TARGETS) *.o build-stamp sleep
+	rm -f $(TARGETS) *.o
 
 .PHONY: all clean
